Readded headers Fixed section spacing

--- a/NevisAudio-live/styles/style.css
+++ b/NevisAudio-live/styles/style.css
@@ -432,7 +432,7 @@ button {
 }
 
 .plan {
-  padding-top: 3rem;
+  padding-top: 5rem;
 }
 
 .plan .container {
